--- a/demset-operator/Makefile
+++ b/demset-operator/Makefile
@@ -1,24 +1,24 @@
 SHELL = bash
 
 clean:
-	microk8s kubectl delete deployment demset-operator
-	microk8s kubectl delete crd webapps.demoapp.devops.lk
+	 kubectl delete deployment demset-operator
+	 kubectl delete crd webapps.demoapp.devops.lk
 
 delete-crd:
-	microk8s kubectl delete crd webapps.demoapp.devops.lk
+	 kubectl delete crd webapps.demoapp.devops.lk
 
 create-cr:
-	microk8s kubectl create -f deploy/crds/demoapp.devops.lk_v1alpha1_webapp_cr.yaml 
+	 kubectl create -f deploy/crds/demoapp.devops.lk_v1alpha1_webapp_cr.yaml 
 
 apply-resources:
-	microk8s kubectl create -f deploy/service_account.yaml
-	microk8s kubectl create -f deploy/role.yaml
-	microk8s kubectl create -f deploy/role_binding.yaml
-	microk8s kubectl create -f deploy/operator.yaml
+	 kubectl create -f deploy/service_account.yaml
+	 kubectl create -f deploy/role.yaml
+	 kubectl create -f deploy/role_binding.yaml
+	 kubectl create -f deploy/operator.yaml
 
 create-crd:
-	microk8s kubectl create -f deploy/crds/demoapp.devops.lk_webapps_crd.yaml 
-	microk8s kubectl create -f deploy/operator.yaml
+	 kubectl create -f deploy/crds/demoapp.devops.lk_webapps_crd.yaml 
+	 kubectl create -f deploy/operator.yaml
 
 push-img: 
 	docker push  amilaku/demset-operator:v0.0.3
